--- a/README.Rmd
+++ b/README.Rmd
@@ -25,8 +25,121 @@ Testing the Model with Hill Climbing Optimization: Once the Bayesian Network is 
 
 This approach integrates both qualitative insights from experts and quantitative data, allowing for a robust and adaptable decision model. The project will leverage causal inference techniques, expert-elicited probabilities, and optimization algorithms to improve decision-making for interventions aimed at enhancing livelihoods through agroforestry.
 
-```{r plot}
+```{r plot_dagitty}
   source("dagitty_tree_planting.R")
 # Plot the DAG
 plot(dag)
 ```
+We build the same graph in `bnlearn` for use in that environment. See all the custom CPTs in `model_in_bnlearn.R`. 
+
+```{r plot_network_structure}
+source("model_in_bnlearn.R")
+plot(network_structure)
+```
+
+## Perform inference 
+
+Calculate the probability of "Livelihoods" being "Improved" given "Trees on Farm". 
+
+```{r inference_result}
+inference_result <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (TreesOnFarm == "Yes"))
+
+cat("Probability of improved livelihoods given trees on farm: ", inference_result, "\n")
+```
+
+To validate our Bayesian Network, we can perform several tests to ensure that the model behaves as expected and that the conditional dependencies between the nodes are correctly represented. 
+
+### Inconsistent Evidence
+
+Try introducing evidence that contradicts the CPTs and check for the system's response. For example, if a node is conditioned on one state, but the evidence conflicts with that, it should return a very low or zero probability.
+
+```{r inconsistent_inference}
+inconsistent_inference <- cpquery(bn_fitted, event = (TreesOnFarm == "No"), evidence = (Firewood == "Yes"))
+print(inconsistent_inference)
+```
+
+This tests the model's behavior when evidence contradicts the dependency structure.
+
+### Query for Node Probabilities
+
+Test the probability distributions of individual nodes given various evidence. For example, given evidence for Market, check the conditional probability distribution for Livelihoods.
+
+Example for Livelihoods:
+
+```{r inference_Livelihoods}
+inference_Livelihoods <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Benefits == "High"))
+print(inference_Livelihoods)
+```
+
+This should return the probability of improved livelihoods given that the market is high.
+
+### Sensitivity Analysis
+
+Perform a sensitivity analysis to understand how changes in one or more variables affect the results. For example, change the probability of Firewood or Timber and see how it affects the probability of Livelihoods.
+
+```{r sensitivity_analysis}
+sensitivity_analysis <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Timber == "Yes"))
+print(sensitivity_analysis)
+```
+
+### Simulation and Comparison with Expected Results
+
+Generate synthetic data based on our network structure and compare it with expected or known results.
+
+```{r simulated_data}
+# Simulate 1000 samples
+simulated_data <- rbn(bn_fitted, n = 1000)
+head(simulated_data)
+```
+
+Calculate the observed distribution of 'Livelihoods'.
+
+```{r observed_Livelihoods}
+observed_Livelihoods <- table(simulated_data$Livelihoods) / nrow(simulated_data)
+print(observed_Livelihoods)
+```
+
+Save the expectation for 'Livelihoods'. 
+
+```{r expected_Livelihoods}
+expected_Livelihoods <- c("Improved" = 0.7, "Not Improved" = 0.3)
+```
+
+Compare the observed distribution with the expected one. 
+
+```{r observed_expected_compare}
+data.frame(
+  "Observed" = observed_Livelihoods,
+  "Expected" = expected_Livelihoods
+)
+```
+
+Calculate the distribution of 'Timber' given 'TreesOnFarm' (example for other node relationships too).
+
+```{r}
+observed_Timber_given_TreesOnFarm <- table(simulated_data$Timber, simulated_data$TreesOnFarm) / nrow(simulated_data)
+print(observed_Timber_given_TreesOnFarm)
+```
+
+Visualize Livelihoods results. 
+
+```{r}
+library(ggplot2)
+
+ggplot(simulated_data, aes(x = Livelihoods)) +
+  geom_bar(aes(y = after_stat(prop)), stat = "count") +
+  scale_y_continuous(labels = scales::percent) +
+  ggtitle("Distribution of Livelihoods in Simulated Data")
+
+```
+
+### Hill-climbing algorithm
+
+Learn the structure of a Bayesian network using a hill-climbing algorithm `hc`. 
+
+```{r hill_climbing}
+source("hill_climbing.R")
+plot(fitted_model)
+```
+
+Using a hill-climbing algorithm to learn the structure of a Bayesian Network (BN) based on observed data. The observed data contains information from five publications, each contributing to various factors that may influence agroforestry systems and livelihoods in different regions. The goal is to use this data to infer the best network structure that best explains the dependencies among the variables in the dataset. See the details in `hill_climbing.R`.
