--- a/README.Rmd
+++ b/README.Rmd
@@ -13,23 +13,18 @@ knitr::opts_chunk$set(
 
 # Hill Climbing as test for causal model
 
-Project Description:
+We apply causal inference techniques, expert-elicited probabilities, and optimization algorithms to improve decision-making for interventions aimed at enhancing livelihoods through agroforestry. We use a hill-climbing algorithm to learn the structure of a Bayesian Network (BN) based on observed data. The observed data contains information from five publications, each contributing to various factors that may influence agroforestry systems and livelihoods in different regions. The goal is to use this data to infer the best network structure that best explains the dependencies among the variables in the dataset. See the details in `hill_climbing.R`.
 
-This project aims to build a predictive decision model that connects causal relationships between planting trees on farms and farmer livelihoods. The process will unfold in three main steps:
+We aim to build a predictive decision model that connects causal relationships between planting trees on farms and farmer livelihoods. The process has three main steps: 1. searching available literature to define the key causal relationships related to planting trees on farms. A Directed Acyclic Graph (DAG) will be constructed to visually represent these relationships, incorporating various factors like costs, benefits, risks, and their impact on livelihoods, 2. the causal model will be translated into a BN. Literature results will be used to fill in the Conditional Probability Tables (CPTs) for each node in the BN, providing the probability distributions based on available data, 3. once the Bayesian Network is constructed, data will be gathered (even if minimal) to test and refine the model. The hill climbing algorithm will be applied to optimize the model's parameters by adjusting them to best fit the observed data. The optimization process will focus on maximizing the model’s predictive accuracy and identifying the most likely causal relationships. The work demonstrates a robust and adaptable decision model.
 
-Defining the Problem and Building a Causal Model: The first step involves engaging experts and utilizing available literature to define the key causal relationships related to the intervention (e.g., planting trees on farms). A Directed Acyclic Graph (DAG) will be constructed to visually represent these relationships, incorporating various factors like costs, benefits, risks, and their impact on livelihoods.
 
-Creating a Predictive Decision Model Using Expert Elicitation: In this phase, the causal model will be translated into a Bayesian Network (BN). Expert elicitation will be used to fill in the Conditional Probability Tables (CPTs) for each node in the BN, providing the probability distributions based on expert knowledge and available data.
-
-Testing the Model with Hill Climbing Optimization: Once the Bayesian Network is constructed, data will be gathered (even if minimal) to test and refine the model. The hill climbing algorithm will be applied to optimize the model's parameters by adjusting them to best fit the observed data. The optimization process will focus on maximizing the model’s predictive accuracy and identifying the most likely causal relationships.
-
-This approach integrates both qualitative insights from experts and quantitative data, allowing for a robust and adaptable decision model. The project will leverage causal inference techniques, expert-elicited probabilities, and optimization algorithms to improve decision-making for interventions aimed at enhancing livelihoods through agroforestry.
 
 ```{r plot_dagitty}
   source("dagitty_tree_planting.R")
 # Plot the DAG
 plot(dag)
 ```
+
 We build the same graph in `bnlearn` for use in that environment. See all the custom CPTs in `model_in_bnlearn.R`. 
 
 ```{r plot_network_structure}
@@ -42,21 +37,19 @@ plot(network_structure)
 Calculate the probability of "Livelihoods" being "Improved" given "Trees on Farm". 
 
 ```{r inference_result}
-inference_result <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (TreesOnFarm == "Yes"))
+cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (TreesOnFarm == "Yes"))
 
-cat("Probability of improved livelihoods given trees on farm: ", inference_result, "\n")
 ```
 
 To validate our Bayesian Network, we can perform several tests to ensure that the model behaves as expected and that the conditional dependencies between the nodes are correctly represented. 
 
-### Inconsistent Evidence
+### Test for inconsistent Evidence
 
-Try introducing evidence that contradicts the CPTs and check for the system's response. For example, if a node is conditioned on one state, but the evidence conflicts with that, it should return a very low or zero probability.
+Here we introduce evidence that contradicts the CPTs to check for the system response. A node conditioned on one state `TreesOnFarm == "No"`, but the evidence `Firewood == "Yes"` conflicts with that, it should return a very low or zero probability (for each iteration of the model).
 
 ```{r inconsistent_inference}
-inconsistent_inference <- cpquery(bn_fitted, event = (TreesOnFarm == "No"), evidence = (Firewood == "Yes"))
+cpquery(bn_fitted, event = (TreesOnFarm == "No"), evidence = (Firewood == "Yes"))
 
-inconsistent_inference
 ```
 
 This tests the model's behavior when evidence contradicts the dependency structure.
@@ -68,9 +61,8 @@ Test the probability distributions of individual nodes given various evidence. F
 Example for Livelihoods:
 
 ```{r inference_Livelihoods}
-inference_Livelihoods <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Benefits == "High"))
+cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Benefits == "High"))
 
-inference_Livelihoods
 ```
 
 This should return the probability of improved livelihoods given that the market is high.
@@ -80,14 +72,13 @@ This should return the probability of improved livelihoods given that the market
 Perform a sensitivity analysis to understand how changes in one or more variables affect the results. For example, change the probability of Firewood or Timber and see how it affects the probability of Livelihoods.
 
 ```{r sensitivity_analysis}
-sensitivity_analysis <- cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Timber == "Yes"))
+cpquery(bn_fitted, event = (Livelihoods == "Improved"), evidence = (Timber == "Yes"))
 
-sensitivity_analysis
 ```
 
 ### Simulation and Comparison with Expected Results
 
-Generate synthetic data based on our network structure and compare it with expected or known results.
+Generate synthetic data based on the network structure and compare it with expected or known results.
 
 ```{r simulated_data}
 # Simulate 1000 samples
@@ -121,9 +112,8 @@ data.frame(
 Calculate the distribution of 'Timber' given 'TreesOnFarm' (example for other node relationships too).
 
 ```{r observed_Timber_given_TreesOnFarm}
-observed_Timber_given_TreesOnFarm <- table(simulated_data$Timber, simulated_data$TreesOnFarm) / nrow(simulated_data)
+table(simulated_data$Timber, simulated_data$TreesOnFarm) / nrow(simulated_data)
 
-observed_Timber_given_TreesOnFarm
 ```
 
 Visualize Livelihoods results. 
@@ -142,9 +132,88 @@ ggplot(simulated_data, aes(x = Livelihoods)) +
 
 Learn the structure of a Bayesian network using a hill-climbing algorithm `hc`. 
 
+The observations for the are based on reports from 5 publications:
+
+- "Agroforestry for Sustainable Development: Evidence from Smallholder Farms in
+ Sub-Saharan Africa" (FAO Report): data about tree planting systems, timber,
+ firewood, fruit, and market access in Sub-Saharan Africa. insight into whether
+ these systems are beneficial and whether they are contributing to improved
+ livelihoods.
+
+- "Impact of Agroforestry Systems on Livelihoods: A Case Study in Central
+ India":  data on how agroforestry affects the livelihoods of smallholder
+ farmers, including income from timber, firewood, and fruit production.
+
+- "The Role of Agroforestry in Climate Change Adaptation and Mitigation" (IPCC
+ Report):  data on external risks such as climate change, and how different
+ agroforestry systems mitigate these risks `fill the "ExternalRisks" column`
+
+- "Socioeconomic Impacts of Agroforestry on Farmers: A Longitudinal Study":
+ detailed information on market access, income sources (such as timber,
+ firewood, and fruit), and how these affect costs and benefits
+
+- "Agroforestry and Sustainable Land Management: A Study in Southeast Asia":
+ insight into the habitat services provided by agroforestry, such as
+ biodiversity, as well as its economic impacts
+
 ```{r hill_climbing}
-source("hill_climbing.R")
+# Example with hill climbing (using bnlearn)
+library(bnlearn)
+```
+
+We used the score-based structure learning algorithm from `bnlearn` to learn the structure of a Bayesian network using a hill-climbing algorithm. We used the observed data from the 5 papers with some missing values (NA) for unobserved nodes. 
+
+```{r observed_data}
+observed_data <- data.frame(
+  TreesOnFarm = c("Yes", "No", "Yes", "Yes", "Yes"),
+  Timber = c("Yes", "No", "Yes", "No", "Yes"),
+  Firewood = c("Yes", NA, "No", "Yes", NA),
+  Fruit = c("No", "No", NA, "No", "Yes"),
+  Market = c(NA, "High", "High", "Low", "High"),
+  Shade = c("Yes", "No", "Yes", NA, "No"),
+  Habitat = c("Yes", NA, "No", "Yes", "No"),
+  ExternalRisks = c("Low", "High", "High", "Low", "Low"),
+  Costs = c("High", "Low", "Low", NA, "High"),
+  Benefits = c("Low", "High", "Low", "High", NA),
+  Livelihoods = c(NA, "Improved", "Improved", "Not Improved", "Improved")
+)
+```
+
+Convert all the character columns from our observations into factors for the hill climbing. 
+
+```{r convert_columns}
+
+# Convert character columns to factors
+observed_data$TreesOnFarm <- as.factor(observed_data$TreesOnFarm)
+observed_data$Timber <- as.factor(observed_data$Timber)
+observed_data$Firewood <- as.factor(observed_data$Firewood)
+observed_data$Fruit <- as.factor(observed_data$Fruit)
+observed_data$Market <- as.factor(observed_data$Market)
+observed_data$Shade <- as.factor(observed_data$Shade)
+observed_data$Habitat <- as.factor(observed_data$Habitat)
+observed_data$ExternalRisks <- as.factor(observed_data$ExternalRisks)
+observed_data$Costs <- as.factor(observed_data$Costs)
+observed_data$Benefits <- as.factor(observed_data$Benefits)
+observed_data$Livelihoods <- as.factor(observed_data$Livelihoods)
+```
+
+Plot the fitted model with the data from the papers only. 
+
+```{r fitted_model}
+source("model_in_bnlearn.R")
+# x in hc = the observations alone
+fitted_model <- hc(observed_data)
 plot(fitted_model)
 ```
 
-Using a hill-climbing algorithm to learn the structure of a Bayesian Network (BN) based on observed data. The observed data contains information from five publications, each contributing to various factors that may influence agroforestry systems and livelihoods in different regions. The goal is to use this data to infer the best network structure that best explains the dependencies among the variables in the dataset. See the details in `hill_climbing.R`.
+Plot the model based on both our model structure and the literature when we use the original network structure as a start. 
+
+```{r hill_climbing_model}
+# x in hc = the observations 
+# start = the original network structure 
+hill_climbing_model <- hc(x= observed_data, start = network_structure)
+plot(hill_climbing_model)
+
+```
+
+
